--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <section class="page-header">
       <h1 class="project-name">Elec327-final-project</h1>
       <h2 class="project-tagline">An alarm clock created using persistence of vision</h2>
-      <a href="https://github.com/MemeTeme/ELEC327-Final-Project" class="btn">View on GitHub</a>
-      <a href="https://github.com/MemeTeme/ELEC327-Final-Project/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/MemeTeme/ELEC327-Final-Project/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
       <h1>
 <a id="project-overview" class="anchor" href="#project-overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Project Overview</h1>
 
-<p><a href="https://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE"><img src="https://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg" alt="SHORT VIDEO"></a></p>
+<center><p>POVAlarmClock-Trailer:</p></center>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/TRAILERLINKHERE" frameborder="0" allowfullscreen></iframe></center>
 
-<p><a href="https://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE"><img src="https://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg" alt="LONG VIDEO"></a></p>
+<center><p>POVAlarmClock-VideoReport:</p></center>
+
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/REPORTLINKHERE" frameborder="0" allowfullscreen></iframe></center>
 
 <p>We created a clock and alarm system that have two-way bluetooth communication for our final project. The clock looks like an old fashioned clock face, but was created using digital control of LEDs and persistence of vision (POV) which creates a much more interesting clock face display. The alarm system contains buttons with which the user sets the alarm time, and an LCD screen so that the user can view the set alarm time. The alarm system is synchronized with this POV clock, but exists as a separate module; this is possible due to the bluetooth communication between the POV clock and the alarm system. The two components exist separately to increase the usability of this product. Since the POV alarm clock spins rapidly, it’s not practical, safe, nor useful to expect users to set the alarm near the spinning clock face. With the two module design, the user can for example keep the alarm system on his bedside table and set the alarm before going to sleep. This alarm system will communicate via bluetooth to the POV clock located elsewhere in the room, and the alarm will sound with the POV clock reaches the alarm time set by the user.</p>
 
