Minor HTML edits

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Elec327-final-project</h1>
-      <h2 class="project-tagline">An alarm clock created using persistence of vision</h2>
+      <h2 class="project-tagline">An Alarm Clock Created Using Persistence of Vision</h2>
+      <center><p>Authors: Yamin Arefeen, Greg Harper, Sarah Hooper, &amp; Jorge Quintero</p></center>
     </section>
 
     <section class="main-content">
