--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 
 <p>The proceeding sections will first go into detail about persistence of vision and bluetooth communication, then elaborate on the three major parts of this project: the hardware and software implementations of the spinning PCB, the stationary alarm PCB, and the bluetooth modules.  </p>
 
+<p><img src="https://github.com/MemeTeme/ELEC327-Final-Project/blob/master/IMG_3734.JPG" alt="Other Clock Face"> <img src="https://github.com/MemeTeme/ELEC327-Final-Project/blob/master/IMG_3735.JPG" alt="Clock Face"></p>
+
 <h3>
+  
 <a id="persistence-of-vision" class="anchor" href="#persistence-of-vision" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Persistence of Vision</h3>
 
 <p>Persistence of vision (POV) takes advantage of the fact that humans perceive the quick progression of images as motion. This phenomenon is widely utilized, and is why we perceive cinematic movies as live action. POV is a result of the fact that the human visual system can only register about 16 unique scenes per second; once light reaches the retina of the eye, the mind maintains that perception for a little less than a 10th of a second. If many scenes are shown at a faster rate that this, the mind begins to blend the various perceptions together and the discrete images are interpreted as one continuous, though changing, visual scene. This is most likely a result of the fact that the human visual system evolved to interact with the natural world. Very little in the natural world that is perceptible by sight changes in a significant way faster than a tenth of a second. The visual system avoids the burden of having to process hundreds of images every second while still ensuring that the rest of the brain receives the information necessary to safely interact with the surrounding world.</p>
