Fixes Clock Face Images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <p>The proceeding sections will first go into detail about persistence of vision and bluetooth communication, then elaborate on the three major parts of this project: the hardware and software implementations of the spinning PCB, the stationary alarm PCB, and the bluetooth modules.  </p>
 
-<p><img src="https://github.com/MemeTeme/ELEC327-Final-Project/blob/master/IMG_3734.JPG" alt="Other Clock Face"> <img src="https://github.com/MemeTeme/ELEC327-Final-Project/blob/master/IMG_3735.JPG" alt="Clock Face"></p>
+<p><img src="https://raw.githubusercontent.com/MemeTeme/ELEC327-Final-Project/master/IMG_3734.JPG" alt="Other Clock Face"> <img src="https://raw.githubusercontent.com/MemeTeme/ELEC327-Final-Project/master/IMG_3735.JPG" alt="Clock Face"></p>
 
 <h3>
   
